Proyecto/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ComBloq
    ComLinea

Grammar

Rule 0     S' -> Inicio
Rule 1     Inicio -> InicioProg SepPto sentencias FinProg SepPto
Rule 2     sentencias -> inclibreria sentencias
Rule 3     sentencias -> defvble sentencias
Rule 4     sentencias -> asigvble sentencias
Rule 5     sentencias -> deffunc sentencias
Rule 6     sentencias -> defproc sentencias
Rule 7     sentencias -> asigpin sentencias
Rule 8     sentencias -> if sentencias
Rule 9     sentencias -> while sentencias
Rule 10    sentencias -> fow sentencias
Rule 11    sentencias -> back sentencias
Rule 12    sentencias -> left sentencias
Rule 13    sentencias -> right sentencias
Rule 14    sentencias -> wait sentencias
Rule 15    sentencias -> stop sentencias
Rule 16    sentencias -> empty
Rule 17    inclibreria -> PrADD ParApe listalibrerias ParCie SepPto
Rule 18    listalibrerias -> Id SepPto Id
Rule 19    listalibrerias -> Id SepPto Id SepPtoComa listalibrerias
Rule 20    defvble -> PrVAR ParApe tipodato SepDosPtos Id ParCie SepPto
Rule 21    tipodato -> TDEntero
Rule 22    tipodato -> TDTexto
Rule 23    tipodato -> TDDecimal
Rule 24    tipodato -> TDLogico
Rule 25    asigvble -> Id AsignValor valor SepPto
Rule 26    valor -> Id
Rule 27    valor -> ValorEntero
Rule 28    valor -> ValorTexto
Rule 29    valor -> ValorDecimal
Rule 30    valor -> ValorBool
Rule 31    valor -> Id Ope valor
Rule 32    valor -> ValorEntero Ope valor
Rule 33    valor -> ValorTexto Ope valor
Rule 34    valor -> ValorDecimal Ope valor
Rule 35    valor -> ValorBool Ope valor
Rule 36    deffunc -> PrFUNC ParApe listaargs ParCie sentencias PrRETORNO valor SepPto
Rule 37    listaargs -> tipodato SepDosPtos Id
Rule 38    listaargs -> tipodato SepDosPtos Id listaargs
Rule 39    defproc -> PrFUNC ParApe listaargs ParCie sentencias SepPto
Rule 40    asigpin -> PrPIN ParApe valor SepDosPtos tipopin ParCie SepPto
Rule 41    tipopin -> PrOUTPUT
Rule 42    tipopin -> PrINPUT
Rule 43    if -> PrIF ParApe valor OpeComp valor ParCie PrBEGIN sentencias PrEND SepPto
Rule 44    if -> PrIF ParApe valor OpeComp valor ParCie PrBEGIN sentencias PrEND PrELSE PrBEGIN sentencias PrEND SepPto
Rule 45    while -> PrWHILE ParApe valor OpeComp valor ParCie PrBEGIN sentencias PrEND SepPto
Rule 46    fow -> PrFOW ParApe ParCie SepPto
Rule 47    back -> PrBACK ParApe ParCie SepPto
Rule 48    left -> PrLEFT ParApe ParCie SepPto
Rule 49    right -> PrRIGHT ParApe ParCie SepPto
Rule 50    wait -> PrWAIT ParApe valor ParCie SepPto
Rule 51    stop -> PrSTOP ParApe ParCie SepPto
Rule 52    empty -> <empty>

Terminals, with rules where they appear

AsignValor           : 25
ComBloq              : 
ComLinea             : 
FinProg              : 1
Id                   : 18 18 19 19 20 25 26 31 37 38
InicioProg           : 1
Ope                  : 31 32 33 34 35
OpeComp              : 43 44 45
ParApe               : 17 20 36 39 40 43 44 45 46 47 48 49 50 51
ParCie               : 17 20 36 39 40 43 44 45 46 47 48 49 50 51
PrADD                : 17
PrBACK               : 47
PrBEGIN              : 43 44 44 45
PrELSE               : 44
PrEND                : 43 44 44 45
PrFOW                : 46
PrFUNC               : 36 39
PrIF                 : 43 44
PrINPUT              : 42
PrLEFT               : 48
PrOUTPUT             : 41
PrPIN                : 40
PrRETORNO            : 36
PrRIGHT              : 49
PrSTOP               : 51
PrVAR                : 20
PrWAIT               : 50
PrWHILE              : 45
SepDosPtos           : 20 37 38 40
SepPto               : 1 1 17 18 19 20 25 36 39 40 43 44 45 46 47 48 49 50 51
SepPtoComa           : 19
TDDecimal            : 23
TDEntero             : 21
TDLogico             : 24
TDTexto              : 22
ValorBool            : 30 35
ValorDecimal         : 29 34
ValorEntero          : 27 32
ValorTexto           : 28 33
error                : 

Nonterminals, with rules where they appear

Inicio               : 0
asigpin              : 7
asigvble             : 4
back                 : 11
deffunc              : 5
defproc              : 6
defvble              : 3
empty                : 16
fow                  : 10
if                   : 8
inclibreria          : 2
left                 : 12
listaargs            : 36 38 39
listalibrerias       : 17 19
right                : 13
sentencias           : 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 36 39 43 44 44 45
stop                 : 15
tipodato             : 20 37 38
tipopin              : 40
valor                : 25 31 32 33 34 35 36 40 43 43 44 44 45 45 50
wait                 : 14
while                : 9

Parsing method: LALR

state 0

    (0) S' -> . Inicio
    (1) Inicio -> . InicioProg SepPto sentencias FinProg SepPto

    InicioProg      shift and go to state 2

    Inicio                         shift and go to state 1

state 1

    (0) S' -> Inicio .



state 2

    (1) Inicio -> InicioProg . SepPto sentencias FinProg SepPto

    SepPto          shift and go to state 3


state 3

    (1) Inicio -> InicioProg SepPto . sentencias FinProg SepPto
    (2) sentencias -> . inclibreria sentencias
    (3) sentencias -> . defvble sentencias
    (4) sentencias -> . asigvble sentencias
    (5) sentencias -> . deffunc sentencias
    (6) sentencias -> . defproc sentencias
    (7) sentencias -> . asigpin sentencias
    (8) sentencias -> . if sentencias
    (9) sentencias -> . while sentencias
    (10) sentencias -> . fow sentencias
    (11) sentencias -> . back sentencias
    (12) sentencias -> . left sentencias
    (13) sentencias -> . right sentencias
    (14) sentencias -> . wait sentencias
    (15) sentencias -> . stop sentencias
    (16) sentencias -> . empty
    (17) inclibreria -> . PrADD ParApe listalibrerias ParCie SepPto
    (20) defvble -> . PrVAR ParApe tipodato SepDosPtos Id ParCie SepPto
    (25) asigvble -> . Id AsignValor valor SepPto
    (36) deffunc -> . PrFUNC ParApe listaargs ParCie sentencias PrRETORNO valor SepPto
    (39) defproc -> . PrFUNC ParApe listaargs ParCie sentencias SepPto
    (40) asigpin -> . PrPIN ParApe valor SepDosPtos tipopin ParCie SepPto
    (43) if -> . PrIF ParApe valor OpeComp valor ParCie PrBEGIN sentencias PrEND SepPto
    (44) if -> . PrIF ParApe valor OpeComp valor ParCie PrBEGIN sentencias PrEND PrELSE PrBEGIN sentencias PrEND SepPto
    (45) while -> . PrWHILE ParApe valor OpeComp valor ParCie PrBEGIN sentencias PrEND SepPto
    (46) fow -> . PrFOW ParApe ParCie SepPto
    (47) back -> . PrBACK ParApe ParCie SepPto
    (48) left -> . PrLEFT ParApe ParCie SepPto
    (49) right -> . PrRIGHT ParApe ParCie SepPto
    (50) wait -> . PrWAIT ParApe valor ParCie SepPto
    (51) stop -> . PrSTOP ParApe ParCie SepPto
    (52) empty -> .

    PrADD           shift and go to state 20
    PrVAR           shift and go to state 21
    Id              shift and go to state 22
    PrFUNC          shift and go to state 23
    PrPIN           shift and go to state 24
    PrIF            shift and go to state 25
    PrWHILE         shift and go to state 26
    PrFOW           shift and go to state 27
    PrBACK          shift and go to state 28
    PrLEFT          shift and go to state 29
    PrRIGHT         shift and go to state 30
    PrWAIT          shift and go to state 31
    PrSTOP          shift and go to state 32
    FinProg         reduce using rule 52 (empty -> .)

    sentencias                     shift and go to state 4
    inclibreria                    shift and go to state 5
    defvble                        shift and go to state 6
    asigvble                       shift and go to state 7
    deffunc                        shift and go to state 8
    defproc                        shift and go to state 9
    asigpin                        shift and go to state 10
    if                             shift and go to state 11
    while                          shift and go to state 12
    fow                            shift and go to state 13
    back                           shift and go to state 14
    left                           shift and go to state 15
    right                          shift and go to state 16
    wait                           shift and go to state 17
    stop                           shift and go to state 18
    empty                          shift and go to state 19

state 4

    (1) Inicio -> InicioProg SepPto sentencias . FinProg SepPto

    FinProg         shift and go to state 33


state 5

    (2) sentencias -> inclibreria . sentencias
    (2) sentencias -> . inclibreria sentencias
    (3) sentencias -> . defvble sentencias
    (4) sentencias -> . asigvble sentencias
    (5) sentencias -> . deffunc sentencias
    (6) sentencias -> . defproc sentencias
    (7) sentencias -> . asigpin sentencias
    (8) sentencias -> . if sentencias
    (9) sentencias -> . while sentencias
    (10) sentencias -> . fow sentencias
    (11) sentencias -> . back sentencias
    (12) sentencias -> . left sentencias
    (13) sentencias -> . right sentencias
    (14) sentencias -> . wait sentencias
    (15) sentencias -> . stop sentencias
    (16) sentencias -> . empty
    (17) inclibreria -> . PrADD ParApe listalibrerias ParCie SepPto
    (20) defvble -> . PrVAR ParApe tipodato SepDosPtos Id ParCie SepPto
    (25) asigvble -> . Id AsignValor valor SepPto
    (36) deffunc -> . PrFUNC ParApe listaargs ParCie sentencias PrRETORNO valor SepPto
    (39) defproc -> . PrFUNC ParApe listaargs ParCie sentencias SepPto
    (40) asigpin -> . PrPIN ParApe valor SepDosPtos tipopin ParCie SepPto
    (43) if -> . PrIF ParApe valor OpeComp valor ParCie PrBEGIN sentencias PrEND SepPto
    (44) if -> . PrIF ParApe valor OpeComp valor ParCie PrBEGIN sentencias PrEND PrELSE PrBEGIN sentencias PrEND SepPto
    (45) while -> . PrWHILE ParApe valor OpeComp valor ParCie PrBEGIN sentencias PrEND SepPto
    (46) fow -> . PrFOW ParApe ParCie SepPto
    (47) back -> . PrBACK ParApe ParCie SepPto
    (48) left -> . PrLEFT ParApe ParCie SepPto
    (49) right -> . PrRIGHT ParApe ParCie SepPto
    (50) wait -> . PrWAIT ParApe valor ParCie SepPto
    (51) stop -> . PrSTOP ParApe ParCie SepPto
    (52) empty -> .

    PrADD           shift and go to state 20
    PrVAR           shift and go to state 21
    Id              shift and go to state 22
    PrFUNC          shift and go to state 23
    PrPIN           shift and go to state 24
    PrIF            shift and go to state 25
    PrWHILE         shift and go to state 26
    PrFOW           shift and go to state 27
    PrBACK          shift and go to state 28
    PrLEFT          shift and go to state 29
    PrRIGHT         shift and go to state 30
    PrWAIT          shift and go to state 31
    PrSTOP          shift and go to state 32
    FinProg         reduce using rule 52 (empty -> .)
    PrRETORNO       reduce using rule 52 (empty -> .)
    SepPto          reduce using rule 52 (empty -> .)
    PrEND           reduce using rule 52 (empty -> .)

    inclibreria                    shift and go to state 5
    sentencias                     shift and go to state 34
    defvble                        shift and go to state 6
    asigvble                       shift and go to state 7
    deffunc                        shift and go to state 8
    defproc                        shift and go to state 9
    asigpin                        shift and go to state 10
    if                             shift and go to state 11
    while                          shift and go to state 12
    fow                            shift and go to state 13
    back                           shift and go to state 14
    left                           shift and go to state 15
    right                          shift and go to state 16
    wait                           shift and go to state 17
    stop                           shift and go to state 18
    empty                          shift and go to state 19

state 6

    (3) sentencias -> defvble . sentencias
    (2) sentencias -> . inclibreria sentencias
    (3) sentencias -> . defvble sentencias
    (4) sentencias -> . asigvble sentencias
    (5) sentencias -> . deffunc sentencias
    (6) sentencias -> . defproc sentencias
    (7) sentencias -> . asigpin sentencias
    (8) sentencias -> . if sentencias
    (9) sentencias -> . while sentencias
    (10) sentencias -> . fow sentencias
    (11) sentencias -> . back sentencias
    (12) sentencias -> . left sentencias
    (13) sentencias -> . right sentencias
    (14) sentencias -> . wait sentencias
    (15) sentencias -> . stop sentencias
    (16) sentencias -> . empty
    (17) inclibreria -> . PrADD ParApe listalibrerias ParCie SepPto
    (20) defvble -> . PrVAR ParApe tipodato SepDosPtos Id ParCie SepPto
    (25) asigvble -> . Id AsignValor valor SepPto
    (36) deffunc -> . PrFUNC ParApe listaargs ParCie sentencias PrRETORNO valor SepPto
    (39) defproc -> . PrFUNC ParApe listaargs ParCie sentencias SepPto
    (40) asigpin -> . PrPIN ParApe valor SepDosPtos tipopin ParCie SepPto
    (43) if -> . PrIF ParApe valor OpeComp valor ParCie PrBEGIN sentencias PrEND SepPto
    (44) if -> . PrIF ParApe valor OpeComp valor ParCie PrBEGIN sentencias PrEND PrELSE PrBEGIN sentencias PrEND SepPto
    (45) while -> . PrWHILE ParApe valor OpeComp valor ParCie PrBEGIN sentencias PrEND SepPto
    (46) fow -> . PrFOW ParApe ParCie SepPto
    (47) back -> . PrBACK ParApe ParCie SepPto
    (48) left -> . PrLEFT ParApe ParCie SepPto
    (49) right -> . PrRIGHT ParApe ParCie SepPto
    (50) wait -> . PrWAIT ParApe valor ParCie SepPto
    (51) stop -> . PrSTOP ParApe ParCie SepPto
    (52) empty -> .

    PrADD           shift and go to state 20
    PrVAR           shift and go to state 21
    Id              shift and go to state 22
    PrFUNC          shift and go to state 23
    PrPIN           shift and go to state 24
    PrIF            shift and go to state 25
    PrWHILE         shift and go to state 26
    PrFOW           shift and go to state 27
    PrBACK          shift and go to state 28
    PrLEFT          shift and go to state 29
    PrRIGHT         shift and go to state 30
    PrWAIT          shift and go to state 31
    PrSTOP          shift and go to state 32
    FinProg         reduce using rule 52 (empty -> .)
    PrRETORNO       reduce using rule 52 (empty -> .)
    SepPto          reduce using rule 52 (empty -> .)
    PrEND           reduce using rule 52 (empty -> .)

    defvble                        shift and go to state 6
    sentencias                     shift and go to state 35
    inclibreria                    shift and go to state 5
    asigvble                       shift and go to state 7
    deffunc                        shift and go to state 8
    defproc                        shift and go to state 9
    asigpin                        shift and go to state 10
    if                             shift and go to state 11
    while                          shift and go to state 12
    fow                            shift and go to state 13
    back                           shift and go to state 14
    left                           shift and go to state 15
    right                          shift and go to state 16
    wait                           shift and go to state 17
    stop                           shift and go to state 18
    empty                          shift and go to state 19

state 7

    (4) sentencias -> asigvble . sentencias
    (2) sentencias -> . inclibreria sentencias
    (3) sentencias -> . defvble sentencias
    (4) sentencias -> . asigvble sentencias
    (5) sentencias -> . deffunc sentencias
    (6) sentencias -> . defproc sentencias
    (7) sentencias -> . asigpin sentencias
    (8) sentencias -> . if sentencias
    (9) sentencias -> . while sentencias
    (10) sentencias -> . fow sentencias
    (11) sentencias -> . back sentencias
    (12) sentencias -> . left sentencias
    (13) sentencias -> . right sentencias
    (14) sentencias -> . wait sentencias
    (15) sentencias -> . stop sentencias
    (16) sentencias -> . empty
    (17) inclibreria -> . PrADD ParApe listalibrerias ParCie SepPto
    (20) defvble -> . PrVAR ParApe tipodato SepDosPtos Id ParCie SepPto
    (25) asigvble -> . Id AsignValor valor SepPto
    (36) deffunc -> . PrFUNC ParApe listaargs ParCie sentencias PrRETORNO valor SepPto
    (39) defproc -> . PrFUNC ParApe listaargs ParCie sentencias SepPto
    (40) asigpin -> . PrPIN ParApe valor SepDosPtos tipopin ParCie SepPto
    (43) if -> . PrIF ParApe valor OpeComp valor ParCie PrBEGIN sentencias PrEND SepPto
    (44) if -> . PrIF ParApe valor OpeComp valor ParCie PrBEGIN sentencias PrEND PrELSE PrBEGIN sentencias PrEND SepPto
    (45) while -> . PrWHILE ParApe valor OpeComp valor ParCie PrBEGIN sentencias PrEND SepPto
    (46) fow -> . PrFOW ParApe ParCie SepPto
    (47) back -> . PrBACK ParApe ParCie SepPto
    (48) left -> . PrLEFT ParApe ParCie SepPto
    (49) right -> . PrRIGHT ParApe ParCie SepPto
    (50) wait -> . PrWAIT ParApe valor ParCie SepPto
    (51) stop -> . PrSTOP ParApe ParCie SepPto
    (52) empty -> .

    PrADD           shift and go to state 20
    PrVAR           shift and go to state 21
    Id              shift and go to state 22
    PrFUNC          shift and go to state 23
    PrPIN           shift and go to state 24
    PrIF            shift and go to state 25
    PrWHILE         shift and go to state 26
    PrFOW           shift and go to state 27
    PrBACK          shift and go to state 28
    PrLEFT          shift and go to state 29
    PrRIGHT         shift and go to state 30
    PrWAIT          shift and go to state 31
    PrSTOP          shift and go to state 32
    FinProg         reduce using rule 52 (empty -> .)
    PrRETORNO       reduce using rule 52 (empty -> .)
    SepPto          reduce using rule 52 (empty -> .)
    PrEND           reduce using rule 52 (empty -> .)

    asigvble                       shift and go to state 7
    sentencias                     shift and go to state 36
    inclibreria                    shift and go to state 5
    defvble                        shift and go to state 6
    deffunc                        shift and go to state 8
    defproc                        shift and go to state 9
    asigpin                        shift and go to state 10
    if                             shift and go to state 11
    while                          shift and go to state 12
    fow                            shift and go to state 13
    back                           shift and go to state 14
    left                           shift and go to state 15
    right                          shift and go to state 16
    wait                           shift and go to state 17
    stop                           shift and go to state 18
    empty                          shift and go to state 19

state 8

    (5) sentencias -> deffunc . sentencias
    (2) sentencias -> . inclibreria sentencias
    (3) sentencias -> . defvble sentencias
    (4) sentencias -> . asigvble sentencias
    (5) sentencias -> . deffunc sentencias
    (6) sentencias -> . defproc sentencias
    (7) sentencias -> . asigpin sentencias
    (8) sentencias -> . if sentencias
    (9) sentencias -> . while sentencias
    (10) sentencias -> . fow sentencias
    (11) sentencias -> . back sentencias
    (12) sentencias -> . left sentencias
    (13) sentencias -> . right sentencias
    (14) sentencias -> . wait sentencias
    (15) sentencias -> . stop sentencias
    (16) sentencias -> . empty
    (17) inclibreria -> . PrADD ParApe listalibrerias ParCie SepPto
    (20) defvble -> . PrVAR ParApe tipodato SepDosPtos Id ParCie SepPto
    (25) asigvble -> . Id AsignValor valor SepPto
    (36) deffunc -> . PrFUNC ParApe listaargs ParCie sentencias PrRETORNO valor SepPto
    (39) defproc -> . PrFUNC ParApe listaargs ParCie sentencias SepPto
    (40) asigpin -> . PrPIN ParApe valor SepDosPtos tipopin ParCie SepPto
    (43) if -> . PrIF ParApe valor OpeComp valor ParCie PrBEGIN sentencias PrEND SepPto
    (44) if -> . PrIF ParApe valor OpeComp valor ParCie PrBEGIN sentencias PrEND PrELSE PrBEGIN sentencias PrEND SepPto
    (45) while -> . PrWHILE ParApe valor OpeComp valor ParCie PrBEGIN sentencias PrEND SepPto
    (46) fow -> . PrFOW ParApe ParCie SepPto
    (47) back -> . PrBACK ParApe ParCie SepPto
    (48) left -> . PrLEFT ParApe ParCie SepPto
    (49) right -> . PrRIGHT ParApe ParCie SepPto
    (50) wait -> . PrWAIT ParApe valor ParCie SepPto
    (51) stop -> . PrSTOP ParApe ParCie SepPto
    (52) empty -> .

    PrADD           shift and go to state 20
    PrVAR           shift and go to state 21
    Id              shift and go to state 22
    PrFUNC          shift and go to state 23
    PrPIN           shift and go to state 24
    PrIF            shift and go to state 25
    PrWHILE         shift and go to state 26
    PrFOW           shift and go to state 27
    PrBACK          shift and go to state 28
    PrLEFT          shift and go to state 29
    PrRIGHT         shift and go to state 30
    PrWAIT          shift and go to state 31
    PrSTOP          shift and go to state 32
    FinProg         reduce using rule 52 (empty -> .)
    PrRETORNO       reduce using rule 52 (empty -> .)
    SepPto          reduce using rule 52 (empty -> .)
    PrEND           reduce using rule 52 (empty -> .)

    deffunc                        shift and go to state 8
    sentencias                     shift and go to state 37
    inclibreria                    shift and go to state 5
    defvble                        shift and go to state 6
    asigvble                       shift and go to state 7
    defproc                        shift and go to state 9
    asigpin                        shift and go to state 10
    if                             shift and go to state 11
    while                          shift and go to state 12
    fow                            shift and go to state 13
    back                           shift and go to state 14
    left                           shift and go to state 15
    right                          shift and go to state 16
    wait                           shift and go to state 17
    stop                           shift and go to state 18
    empty                          shift and go to state 19

state 9

    (6) sentencias -> defproc . sentencias
    (2) sentencias -> . inclibreria sentencias
    (3) sentencias -> . defvble sentencias
    (4) sentencias -> . asigvble sentencias
    (5) sentencias -> . deffunc sentencias
    (6) sentencias -> . defproc sentencias
    (7) sentencias -> . asigpin sentencias
    (8) sentencias -> . if sentencias
    (9) sentencias -> . while sentencias
    (10) sentencias -> . fow sentencias
    (11) sentencias -> . back sentencias
    (12) sentencias -> . left sentencias
    (13) sentencias -> . right sentencias
    (14) sentencias -> . wait sentencias
    (15) sentencias -> . stop sentencias
    (16) sentencias -> . empty
    (17) inclibreria -> . PrADD ParApe listalibrerias ParCie SepPto
    (20) defvble -> . PrVAR ParApe tipodato SepDosPtos Id ParCie SepPto
    (25) asigvble -> . Id AsignValor valor SepPto
    (36) deffunc -> . PrFUNC ParApe listaargs ParCie sentencias PrRETORNO valor SepPto
    (39) defproc -> . PrFUNC ParApe listaargs ParCie sentencias SepPto
    (40) asigpin -> . PrPIN ParApe valor SepDosPtos tipopin ParCie SepPto
    (43) if -> . PrIF ParApe valor OpeComp valor ParCie PrBEGIN sentencias PrEND SepPto
    (44) if -> . PrIF ParApe valor OpeComp valor ParCie PrBEGIN sentencias PrEND PrELSE PrBEGIN sentencias PrEND SepPto
    (45) while -> . PrWHILE ParApe valor OpeComp valor ParCie PrBEGIN sentencias PrEND SepPto
    (46) fow -> . PrFOW ParApe ParCie SepPto
    (47) back -> . PrBACK ParApe ParCie SepPto
    (48) left -> . PrLEFT ParApe ParCie SepPto
    (49) right -> . PrRIGHT ParApe ParCie SepPto
    (50) wait -> . PrWAIT ParApe valor ParCie SepPto
    (51) stop -> . PrSTOP ParApe ParCie SepPto
    (52) empty -> .

    PrADD           shift and go to state 20
    PrVAR           shift and go to state 21
    Id              shift and go to state 22
    PrFUNC          shift and go to state 23
    PrPIN           shift and go to state 24
    PrIF            shift and go to state 25
    PrWHILE         shift and go to state 26
    PrFOW           shift and go to state 27
    PrBACK          shift and go to state 28
    PrLEFT          shift and go to state 29
    PrRIGHT         shift and go to state 30
    PrWAIT          shift and go to state 31
    PrSTOP          shift and go to state 32
    FinProg         reduce using rule 52 (empty -> .)
    PrRETORNO       reduce using rule 52 (empty -> .)
    SepPto          reduce using rule 52 (empty -> .)
    PrEND           reduce using rule 52 (empty -> .)

    defproc                        shift and go to state 9
    sentencias                     shift and go to state 38
    inclibreria                    shift and go to state 5
    defvble                        shift and go to state 6
    asigvble                       shift and go to state 7
    deffunc                        shift and go to state 8
    asigpin                        shift and go to state 10
    if                             shift and go to state 11
    while                          shift and go to state 12
    fow                            shift and go to state 13
    back                           shift and go to state 14
    left                           shift and go to state 15
    right                          shift and go to state 16
    wait                           shift and go to state 17
    stop                           shift and go to state 18
    empty                          shift and go to state 19

state 10

    (7) sentencias -> asigpin . sentencias
    (2) sentencias -> . inclibreria sentencias
    (3) sentencias -> . defvble sentencias
    (4) sentencias -> . asigvble sentencias
    (5) sentencias -> . deffunc sentencias
    (6) sentencias -> . defproc sentencias
    (7) sentencias -> . asigpin sentencias
    (8) sentencias -> . if sentencias
    (9) sentencias -> . while sentencias
    (10) sentencias -> . fow sentencias
    (11) sentencias -> . back sentencias
    (12) sentencias -> . left sentencias
    (13) sentencias -> . right sentencias
    (14) sentencias -> . wait sentencias
    (15) sentencias -> . stop sentencias
    (16) sentencias -> . empty
    (17) inclibreria -> . PrADD ParApe listalibrerias ParCie SepPto
    (20) defvble -> . PrVAR ParApe tipodato SepDosPtos Id ParCie SepPto
    (25) asigvble -> . Id AsignValor valor SepPto
    (36) deffunc -> . PrFUNC ParApe listaargs ParCie sentencias PrRETORNO valor SepPto
    (39) defproc -> . PrFUNC ParApe listaargs ParCie sentencias SepPto
    (40) asigpin -> . PrPIN ParApe valor SepDosPtos tipopin ParCie SepPto
    (43) if -> . PrIF ParApe valor OpeComp valor ParCie PrBEGIN sentencias PrEND SepPto
    (44) if -> . PrIF ParApe valor OpeComp valor ParCie PrBEGIN sentencias PrEND PrELSE PrBEGIN sentencias PrEND SepPto
    (45) while -> . PrWHILE ParApe valor OpeComp valor ParCie PrBEGIN sentencias PrEND SepPto
    (46) fow -> . PrFOW ParApe ParCie SepPto
    (47) back -> . PrBACK ParApe ParCie SepPto
    (48) left -> . PrLEFT ParApe ParCie SepPto
    (49) right -> . PrRIGHT ParApe ParCie SepPto
    (50) wait -> . PrWAIT ParApe valor ParCie SepPto
    (51) stop -> . PrSTOP ParApe ParCie SepPto
    (52) empty -> .

    PrADD           shift and go to state 20
    PrVAR           shift and go to state 21
    Id              shift and go to state 22
    PrFUNC          shift and go to state 23
    PrPIN           shift and go to state 24
    PrIF            shift and go to state 25
    PrWHILE         shift and go to state 26
    PrFOW           shift and go to state 27
    PrBACK          shift and go to state 28
    PrLEFT          shift and go to state 29
    PrRIGHT         shift and go to state 30
    PrWAIT          shift and go to state 31
    PrSTOP          shift and go to state 32
    FinProg         reduce using rule 52 (empty -> .)
    PrRETORNO       reduce using rule 52 (empty -> .)
    SepPto          reduce using rule 52 (empty -> .)
    PrEND           reduce using rule 52 (empty -> .)

    asigpin                        shift and go to state 10
    sentencias                     shift and go to state 39
    inclibreria                    shift and go to state 5
    defvble                        shift and go to state 6
    asigvble                       shift and go to state 7
    deffunc                        shift and go to state 8
    defproc                        shift and go to state 9
    if                             shift and go to state 11
    while                          shift and go to state 12
    fow                            shift and go to state 13
    back                           shift and go to state 14
    left                           shift and go to state 15
    right                          shift and go to state 16
    wait                           shift and go to state 17
    stop                           shift and go to state 18
    empty                          shift and go to state 19

state 11

    (8) sentencias -> if . sentencias
    (2) sentencias -> . inclibreria sentencias
    (3) sentencias -> . defvble sentencias
    (4) sentencias -> . asigvble sentencias
    (5) sentencias -> . deffunc sentencias
    (6) sentencias -> . defproc sentencias
    (7) sentencias -> . asigpin sentencias
    (8) sentencias -> . if sentencias
    (9) sentencias -> . while sentencias
    (10) sentencias -> . fow sentencias
    (11) sentencias -> . back sentencias
    (12) sentencias -> . left sentencias
    (13) sentencias -> . right sentencias
    (14) sentencias -> . wait sentencias
    (15) sentencias -> . stop sentencias
    (16) sentencias -> . empty
    (17) inclibreria -> . PrADD ParApe listalibrerias ParCie SepPto
    (20) defvble -> . PrVAR ParApe tipodato SepDosPtos Id ParCie SepPto
    (25) asigvble -> . Id AsignValor valor SepPto
    (36) deffunc -> . PrFUNC ParApe listaargs ParCie sentencias PrRETORNO valor SepPto
    (39) defproc -> . PrFUNC ParApe listaargs ParCie sentencias SepPto
    (40) asigpin -> . PrPIN ParApe valor SepDosPtos tipopin ParCie SepPto
    (43) if -> . PrIF ParApe valor OpeComp valor ParCie PrBEGIN sentencias PrEND SepPto
    (44) if -> . PrIF ParApe valor OpeComp valor ParCie PrBEGIN sentencias PrEND PrELSE PrBEGIN sentencias PrEND SepPto
    (45) while -> . PrWHILE ParApe valor OpeComp valor ParCie PrBEGIN sentencias PrEND SepPto
    (46) fow -> . PrFOW ParApe ParCie SepPto
    (47) back -> . PrBACK ParApe ParCie SepPto
    (48) left -> . PrLEFT ParApe ParCie SepPto
    (49) right -> . PrRIGHT ParApe ParCie SepPto
    (50) wait -> . PrWAIT ParApe valor ParCie SepPto
    (51) stop -> . PrSTOP ParApe ParCie SepPto
    (52) empty -> .
